# NewElementGstreamer

./: CMakeLists.txt
src/: main.cpp
